--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Zhodani Language Lessons</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
+    <div id="app">
+      <div class="nav-bar">
+          <div class="search">
+            <span class="material-icons-outlined md-24">
+            search
+            </span>
+            <span class="material-icons-outlined md-24">
+              menu
+            </span>
+          </div>
+      </div>
+      <h1>Zhondani Language Lessons</h1>
+      <img v-bind:src="welcomeImage" v-bind:alt="welcomeText">
+    </div>
+      <!-- built files will be auto injected -->
   </body>
 </html>
