Fixing ZLI logo filename so it loads in Amplify FE

--- a/public/index.html
+++ b/public/index.html
@@ -14,20 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"    rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
-    <div id="app">
-      <div class="nav-bar">
-          <div class="search">
-            <span class="material-icons-outlined md-24">
-            search
-            </span>
-            <span class="material-icons-outlined md-24">
-              menu
-            </span>
-          </div>
-      </div>
-      <h1>Zhondani Language Lessons</h1>
-      <img v-bind:src="welcomeImage" v-bind:alt="welcomeText">
-    </div>
+    <div id="app"></div>
       <!-- built files will be auto injected -->
   </body>
 </html>
